# Whisper-Real-Time-Transcription

./: Cargo.toml  README.md  config.toml  setup.sh
.github/workflows/: build.yml
benches/: stream_bench.rs  test_audio.raw  vad_bench.rs  whisper_bench.rs
dictionary/: custom.toml  expanded.lxdb  expanded.toml  main.lxdb  main.lxdb.toml  rules.toml
lxdb/: Cargo.toml
lxdb/src/: builder.rs  format.rs  lib.rs  main.rs  reader.rs  toml_schema.rs
lxdb/tests/: integration.rs
src/: audio.rs  config.rs  display_task.rs  lib.rs  main.rs  types.rs  vad.rs
src/translation/: mod.rs  translate.rs
src/utility/: mod.rs  stats.rs  utils.rs
src/utils/: mod.rs  utils.rs
src/whisper/: engine.rs  mod.rs  whisper.rs
transcriber/: Cargo.toml
transcriber/benches/: stream_bench.rs  vad_bench.rs  whisper_bench.rs
transcriber/dictionary/unresolved/: unresolved.toml
transcriber/src/: audio.rs  config.rs  display_task.rs  lib.rs  main.rs  prelude.rs  types.rs  ui.rs  vad.rs
transcriber/src/translation/: translate.rs
transcriber/src/utility/: utils.rs
transcriber/src/whisper/: engine.rs  mod.rs  stream_info.rs  whisper.rs
